examples/reference/statement_private_import_error.err
Assembly failed:
14: ERROR [asm402]
   14 |     PUSHB $AA
             ^
ERROR: No instruction found for PUSHB
